--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration: none; a:visited { color: blue; }">Home</a>
+      <a href="tags.html" style="margin-left: 10px;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin-left: 10px;">Moby Dick</a>
     </div>
 
     <h1>The Learn Enough Story</h1>
@@ -25,6 +25,23 @@
     <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
       <img src="images/kitten.jpg" alt="An adorable kitten">
     </a>
+
+    <h2>Quotations</h2>
+
+    <p>
+      In addition to hosting most of the world's supply of kitten videos, the
+      Web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+    <div>
+      <blockquote  style="padding: 2px 20px; background: #fafafa;">
+        <p>
+          <em>Don't believe every quote you read on the Internet.</em>
+          <br>
+          —Abraham Lincoln
+        </p>
+      </blockquote>
+    </div>
+
     <h2>Background</h2>
     <p>
       Learn Enough to Be Dangerous is an outgrowth of the <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the <a href="http://www.softcover.io/">Softcover publishing platform</a>. This page is part of the sample site for <a href="http://learnenough.com/html-tutorial"><em>Learn Enough HTML to Be Dangerous</em></a>, which teaches the basics of <strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup <strong>L</strong>anguage, the universal language of the World Wide Web. Other related tutorials can be found at <a href="http://learnenough.com/">learnenough.com</a>.
