--- a/tags.html
+++ b/tags.html
@@ -7,10 +7,10 @@
   </head>
   <body>
 
-    <div>
+    <div style="text-align: right;">
       <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html" style="margin-left:10px;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin-left: 10px;">Moby Dick</a>
     </div>
 
     <h1>Important HTML tags</h1>
@@ -39,8 +39,8 @@
           <th>Purpose</th>
         </tr>
         <tr>
-          <td><code>h1</code>&ndash;<code>h6</code></td>
-          <td>headings</td>
+          <td style="padding: 10px;"><code>h1</code>&ndash;<code>h6</code></td>
+          <td style="padding: 10px;">headings</td>
           <td>include a heading (levels 1&ndash;6)</td>
         </tr>
         <tr>
